--- a/templates/upload.html
+++ b/templates/upload.html
@@ -6,7 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<!-- 
+    Person = {
+        id,
+        name,
+        photo,
+        age,
+        where found,
+        description,
+        contact(if any),
+    } 
+-->
+
 <body>
-    Image uploaded successfully
+    <form action="/upload" method="POST" enctype="multipart/form-data">
+        <div class="form-group">
+            <label for="image">Upload Image of a Person</label>
+            <input type="file" class="form-control-file" id="image" name="image">
+        </div>
+        <button type="submit" class="btn btn-primary">Upload</button>
+    </form>
+    
 </body>
 </html>
