changes in templates and statics

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         class="container d-flex align-items-center justify-content-lg-between"
       >
         <h1 class="logo me-auto me-lg-0">
-          <a href="index.html">FIND<span>.</span></a>
+          <a href="index.html"><span>FIND</span></a>
         </h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <a href="index.html" class="logo me-auto me-lg-0"
@@ -79,7 +79,6 @@
         </nav>
         <!-- .navbar -->
 
-        <a href="#about" class="get-started-btn scrollto">Get Started</a>
       </div>
     </header>
     <!-- End Header -->
@@ -262,30 +261,10 @@
           >. All Rights Reserved
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/ -->
           Designed by <a href="https://bootstrapmade.com/">RANGERS</a>
         </div>
       </div>
     </footer>
-    <!-- End Footer -->
-    <!-- 
-  <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a> -->
-
-    <!-- Vendor JS Files -->
-    <!-- <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script> -->
-
-    <!-- Template Main JS File -->
 
     <script src="{{'static/js/main.js'}}"></script>
   </body>
