--- a/templates/view-all.html
+++ b/templates/view-all.html
@@ -19,7 +19,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center justify-content-lg-between">
-            <h1 class="logo me-auto me-lg-0"><a href="index.html">FIND<span>.</span></a></h1>
+            <h1 class="logo me-auto me-lg-0"><a href="index.html"><span>FIND</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <a href="index.html" class="logo me-auto me-lg-0"><img src="{{'static/img/icons8-search-client-32.png'}}" alt=""
                     class="img-fluid"></a>
@@ -33,34 +33,23 @@
                     <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="#">Drop Down 1</a></li>
-                            <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i
-                                        class="bi bi-chevron-right"></i></a>
-                                <ul>
-                                    <li><a href="#">Deep Drop Down 1</a></li>
-                                    <li><a href="#">Deep Drop Down 2</a></li>
-                                    <li><a href="#">Deep Drop Down 3</a></li>
-                                    <li><a href="#">Deep Drop Down 4</a></li>
-                                    <li><a href="#">Deep Drop Down 5</a></li>
-                                </ul>
-                            </li>
                             <li><a href="#">Drop Down 2</a></li>
                             <li><a href="#">Drop Down 3</a></li>
                             <li><a href="#">Drop Down 4</a></li>
                         </ul>
                     </li>
-                    <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
 
-            <a href="#about" class="get-started-btn scrollto">Get Started</a>
+            
 
         </div>
     </header><!-- End Header -->
 
 <!-- ======= Hero Section ======= -->
 <div class="all_view">
-    <section id="hero2" class="d-flex align-items-center justify-content-center">
+    <section id="hero2" class="d-flex align-items-center justify-content-center" style="padding:55px;">
         <div class="container" data-aos="fade-up">
             <div class="row align-items-stretch justify-content-start card-deck">
 
@@ -70,7 +59,7 @@
                         <div class="flip-card-front">
                               <img src=" {{detail[image]["photo"]}}" height="100%" width="100%" alt= {{detail[image]["photo"]}}>
                         </div>
-                        <div class="flip-card-back">
+                        <div class="flip-card-back" style = "background-color: #fbb322;">
                             <h2>{{detail[image]["id"]}}:{{detail[image]["name"]}}</h2>
                             <p>{{detail[image]["age"]}}</p>
                             <p>{{detail[image]["where_found"]}}</p>
@@ -122,42 +111,19 @@
                         </ul>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Our Services</h4>
-                        <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6 footer-newsletter">
-                        <h4>Our Newsletter</h4>
-                        <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-                        <form action="" method="post">
-                            <input type="email" name="email"><input type="submit" value="Subscribe">
-                        </form>
-
-                    </div>
-
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong><span>RANGERS</span></strong>. All Rights Reserved
+                <a href=""><strong><span>DESIGNED BY RANGERS</span></strong></a>
             </div>
-
-            Designed by <a href="https://bootstrapmade.com/">RANGERS</a>
         </div>
         </div>
     </footer><!-- End Footer -->
 
-    <script src="{{url_for('static',filename='js/main.js')}}"></script>
-  
+    <script src="{{url_for('static',filename='js/main.js')}}"></script> 
 
 </body>
 
