--- a/templates/view-person.html
+++ b/templates/view-person.html
@@ -28,7 +28,7 @@
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
                     <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
+                    <li><a class="nav-link scrollto" href="#about" hidden>About</a></li>
                     <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="#">Drop Down 1</a></li>
@@ -37,23 +37,15 @@
                             <li><a href="#">Drop Down 4</a></li>
                         </ul>
                     </li>
-                    <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
-            <a href="#about" class="get-started-btn scrollto">Get Started</a>
 
         </div>
-    </header><!-- End Header -->
-
-
-
-
-    
-    <section id="hero2" class="d-flex align-items-center justify-content-center">
-        <div class="container" data-aos="fade-up">  
- 
-    <div class="form">
+    </header><!-- End Header --> 
+    <section id="hero2" class="d-flex align-items-center justify-content-center" style="padding:55px;">
+        <div class="container" data-aos="fade-up" >  
+    <div class="form" style="padding-top:25px;padding-bottom:25px;">
       <form class="view-person-form" action="" method="post">
         <label for="name"  style="color:#ffc451;">ENTER ID:</label>
           <input type="text" id="id" name="id" style="opacity:0.4; border: 2px solid #f7b231; border-radius: 4px;background:#ffc451;">
@@ -61,10 +53,9 @@
       </form>
     </div>
 
-    
             <div class="row align-items-stretch justify-content-start card-deck">
             {% if id %}
-            <h1>{{ name }}</h1>
+            <h1 style="color:#ffc451;">{{ name }}</h1>
             {%for image in images %}
                  <div class="col-sm-3 flip-card cards card-2 text-center" style="width: 18rem;">
                               <img src="{{image}}" height="100%" width="100%" alt="">
@@ -124,7 +115,6 @@
         </div>
     </footer><!-- End Footer -->
 
-    <script src="{{url_for('static',filename='js/jQuery.js')}}"></script>
     <script src="{{url_for('static',filename='js/main.js')}}"></script>
   
 
